@@ -4,13 +4,14 @@ import com.example.variableneighbourhoodsearch.model.*;
 import org.springframework.util.*;
 
 import java.util.*;
+import java.util.stream.*;
 
 public class VNSAlgorithm {
 
     public String addUnusedLabelToGraph(Graph graph, Graph subGraph) {
         String addedLabel = "";
         HashSet<String> setSubGraphLabels = subGraph.getSetLabels();
-        List<String> listUnusedLabels = graph.getSetLabels().stream().filter(label -> !setSubGraphLabels.contains(label)).toList();
+        List<String> listUnusedLabels = graph.getSetLabels().stream().filter(label -> !setSubGraphLabels.contains(label)).collect(Collectors.toList());
         if (!CollectionUtils.isEmpty(listUnusedLabels)) {
             Collections.shuffle(listUnusedLabels);
             addedLabel = listUnusedLabels.get(0);
@@ -22,7 +23,7 @@ public class VNSAlgorithm {
 
     public String deleteLabelFromSubGraph(Graph graph, Graph subGraph) {
         String deletedLabel = "";
-        List<String> listUsedLabels = subGraph.getSetLabels().stream().toList();
+        List<String> listUsedLabels = new ArrayList<>(subGraph.getSetLabels());
         if (!CollectionUtils.isEmpty(listUsedLabels)) {
             Collections.shuffle(listUsedLabels);
             deletedLabel = listUsedLabels.get(0);
@@ -43,10 +44,14 @@ public class VNSAlgorithm {
         return subGraph.getSetLabels();
     }
 
-    //TODO
     public Graph localSearch(Graph graph, Graph subGraph) {
         while (!subGraph.isGraphConnected()) {
+            System.out.println("------BASLA-------");
+            subGraph.printLabels();
+            System.out.println("---------------");
             addUnusedLabelToGraph(graph, subGraph);
+            subGraph.printLabels();
+            System.out.println("------BITIR------");
         }
         for (int i = 0; i < subGraph.getSetLabels().size(); i++) {
             String deletedLabel = deleteLabelFromSubGraph(graph, subGraph);
@@ -67,15 +72,9 @@ public class VNSAlgorithm {
             int k = 1;
             int kMax = subGraph.getSetLabels().size() + subGraph.getSetLabels().size() / 3;
             while (k < kMax) {
-                Graph subGraph2;
-                do {
-                    HashSet<String> c2 = shakingPhase(graph, subGraph, k);
-                    subGraph2 = subGraph.createSubGraph(c2);
-                } while (subGraph2.isGraphConnected());
-                do {
-                    subGraph2 = localSearch(graph, subGraph2);
-                } while (subGraph2.isGraphConnected());
-                if (subGraph2.getSetLabels().size() < subGraph2.getSetLabels().size()) {
+                HashSet<String> c2 = shakingPhase(graph, subGraph, k);
+                Graph subGraph2 = localSearch(graph, subGraph.createSubGraph(c2, false));
+                if (subGraph2.getSetLabels().size() < subGraph.getSetLabels().size()) {
                     subGraph = subGraph2;
                     k = 1;
                 } else {
